--- a/index.html
+++ b/index.html
@@ -5,3 +5,18 @@
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
+
+<html>
+
+  <head>
+  </head>
+  
+  <body>
+    <script>
+    
+    document.write("Hello World!");
+    
+    </script>
+  <body>
+  
+</html>
