added one milestone

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <p>Add a picture of a tree, rock, animal, water source if able</p>
 
-      <p>Milestone Goals</p>
+      <p>Add a Javascript file to the repository</p>
 
       <p>Milestone Goals</p>
 
