--- a/index.html
+++ b/index.html
@@ -1,23 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  
-  </head>
-    
-  <body>
-  
-    <h1>Milestone Goals:</h1>
-
-      <p>Add a description of the project</p>
-
-      <p>Add a picture of a tree, rock, animal, water source if able</p>
-
-      <p>Add a Javascript file to the repository</p>
-
-      <p>Milestone Goals</p>
-
-      <p>Milestone Goals</p>
-    
-  </body>
-  
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
