Minor Changes to index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <html>
-<body>
-<h1>Hello World...................</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  
+  <body>
+    
+    <h1>MILESTONE GOALS</h1>
+    
+      <ol>
+        <li>Spruce up my index</li>
+        <li>Add a JavaScript File</li>
+        <li>Add an alert box</li>
+        <li>Add a button</li>
+        <li>Add 4 pictures. rock, water source, tree, and animal</li>
+        <li>Add some CSS</li>
+        <li>Add a description</li>
+      </ol>
+
+  </body>
+
 </html>
