Added a single Java Script
This script should link my main.js to my website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <li>Add some CSS</li>
         <li>Add a description</li>
       </ol>
-
+    
+    <script src="Main.js"></script>
+    
   </body>
 
 </html>
