--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   
+  <head>
+    <link rel="stylesheet" href="CSS.css">
+  </head>
+  
   <body>
     
     <h1>MILESTONE GOALS</h1>
@@ -14,7 +18,7 @@
         <li>Add a description <p style="color:green;"> 100% COMPLETED</p></li>
       </ol>
     
-    <p> Lets work on a game! This game is going to start off with featuring 
+    <p> Lets work on a game! This game is going to start off with featuring
         a clickable button that raises an integer called varStick by 1 for each click. after every 10 clicks,
         a different interger called varNatureDarmaKa will increase by 1. Once you've collected 10 of these
         the player will recieve an achivement (boost). </p>
