--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     
       <ol>
         <li>Spruce up my index</li>
-        <li>Add a JavaScript File<p style="color:green;"> 100% COMPLETED</p></li>
-        <li>Add an alert box</li><p style="color:green;"> TESTING</p>
+        <li>Add a JavaScript File<p class="greenText">100% COMPLETED</p></li>
+        <li>Add an alert box</li><p class="greenText">100% COMPLETED</p>
         <li>Add a button</li>
         <li>Add 4 pictures. rock, water source, tree, and animal</li>
         <li>Add some CSS</li>
-        <li>Add a description <p style="color:green;"> 100% COMPLETED</p></li>
+        <li>Add a description</li><p class="greenText">100% COMPLETED</p>
       </ol>
     
     <p> Lets work on a game! This game is going to start off with featuring
