--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
   
   <head>
     <link rel="stylesheet" href="CSS.css">
+    <title>Oath Foundation</title>
   </head>
   
   <body>
     
-    <h1>MILESTONE GOALS</h1>
+    <h1>OATH FOUNDATION MILESTONE GOALS</h1>
     
         <ul>
           <li>Make your boxes colorful</li>
