Attempt #1 to add an image
Attempt #1 to add an image to a table data

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
     <table class="resourceHub" border="1">
       <tr>
-        <td>STICK</td>
+        <td><img class="stick" src="wood_t.png" alt"" /></td>
         <td>ROCK</td>
       </tr>  
       <tr>
