--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         
     <table class="resourceHub" border="1">
       <tr>
+        <td><img class="search" src="quest_complete_t.png" alt"" /></td>
         <td><img class="stick" src="wood_t.png" alt"" /></td>
-        <td>ROCK</td>
       </tr>  
       <tr>
-        <td>WATER</td>
-        <td>RAT</td>
+        <td><img class="rock" src="pick_t.png" alt"" /></td>
+        <td><img class="hunt" src="food_t.png" alt"" /></td>
       </tr>
     </table>
     
