--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
     <table class="resourceHub" border="1">
       <tr>
-        <td><img class="search" src="quest_complete_t.png" alt"" /></td>
+        <td><img class="search" src="quest_complete_t.png" height="200px" width="200px" alt"" /></td>
         <td><img class="stick" src="wood_t.png" alt"" /></td>
       </tr>  
       <tr>
