--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       Resource Window Header
       <div class="resourceWindowTab1">
         <ul>
-          display:inline;
           <li><img class="search" src="quest_complete_t.png" height="200px" width="200px" alt"" />SEARCH</li>
           <li><img class="stick" src="wood_t.png" height="200px" width="200px" alt"" />STICK</li>
           <li><img class="rock" src="pick_t.png" height="200px" width="200px" alt"" />ROCK</li>
@@ -45,12 +44,12 @@
     
     <table class="resourceHub" border="1">
       <tr>
-        <td><img class="search" src="quest_complete_t.png" height="200px" width="200px" alt"" /></td>
-        <td><img class="stick" src="wood_t.png" height="200px" width="200px" alt"" /></td>
+        <td><img class="search" src="quest_complete_t.png" height="200px" width="200px" alt"" />SEARCH</td>
+        <td><img class="stick" src="wood_t.png" height="200px" width="200px" alt"" />STICK</td>
       </tr>  
       <tr>
-        <td><img class="rock" src="pick_t.png" height="200px" width="200px" alt"" /></td>
-        <td><img class="hunt" src="food_t.png" height="200px" width="200px" alt"" /></td>
+        <td><img class="rock" src="pick_t.png" height="200px" width="200px" alt"" />ROCK</td>
+        <td><img class="hunt" src="food_t.png" height="200px" width="200px" alt"" />HUNT</td>
       </tr>
     </table>
     
