--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <h1>OATH FOUNDATION MILESTONE GOALS</h1>
     
-        <ul>
+        <ul class="milestoneGoals">
           <li>Make your boxes colorful</li>
           <li>Create a window that works like you want</li>
           <li>Fix your code!</li>
@@ -33,7 +33,7 @@
     <div class="resourceWindow">
       Resource Window Header
       <div class="resourceWindowTab1">
-        <ul>
+        <ul class="clickableResource>
           <li><img class="search" src="quest_complete_t.png" height="200px" width="200px" alt"" />SEARCH</li>
           <li><img class="stick" src="wood_t.png" height="200px" width="200px" alt"" />STICK</li>
           <li><img class="rock" src="pick_t.png" height="200px" width="200px" alt"" />ROCK</li>
