--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="resourceWindow">
       Resource Window Header
       <div class="resourceWindowTab1">
-        <ul class="clickableResource>
+        <ul class="clickableResource">
           <li><img class="search" src="quest_complete_t.png" height="200px" width="200px" alt"" />SEARCH</li>
           <li><img class="stick" src="wood_t.png" height="200px" width="200px" alt"" />STICK</li>
           <li><img class="rock" src="pick_t.png" height="200px" width="200px" alt"" />ROCK</li>
