--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       Resource Window Header
       <div class="resourceWindowTab1">
         <ul class="clickableResource">
-          <li><img class="search" src="quest_complete_t.png" height="200px" width="200px" alt"" />SEARCH</li>
-          <li><img class="stick" src="wood_t.png" height="200px" width="200px" alt"" />STICK</li>
-          <li><img class="rock" src="pick_t.png" height="200px" width="200px" alt"" />ROCK</li>
-          <li><img class="hunt" src="food_t.png" height="200px" width="200px" alt"" />HUNT</li>
+          <li class="resources"><img class="search" src="quest_complete_t.png" height="200px" width="200px" alt"" />SEARCH</li>
+          <li class="resources"><img class="stick" src="wood_t.png" height="200px" width="200px" alt"" />STICK</li>
+          <li class="resources"><img class="rock" src="pick_t.png" height="200px" width="200px" alt"" />ROCK</li>
+          <li class="resources"><img class="hunt" src="food_t.png" height="200px" width="200px" alt"" />HUNT</li>
         </ul>
       </div>
     </div>
