--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="resourceWindow" border="1">
       Resource Window Header
       <div class="resourceWindowTab1">
-        <ul class="clickableResource">
+        <ul>
           <li> 
             <div class="label"><img id="search" src="quest_complete_t.png" height="150px" width="150px" alt"" />SEARCH</div>
             <div id="gatherStick"></div>
@@ -56,13 +56,11 @@
     
     <table class="resourceHub" border="1">
       <tr>
-        <td><img id="search" src="quest_complete_t.png" height="200px" width="200px" alt"" />SEARCH</td>
-        <td><img id="stick" src="wood_t.png" height="200px" width="200px" alt"" />STICK</td>
+        <td><img id="gatherStick" src="wood_t.png" height="100px" width="100px" alt"" />SEARCH</td>
+        <td><img id="gatherRock" src="pick_t.png" height="100px" width="100px" alt"" />STICK</td>
+        <td><img id="searchArea" src="quest_complete_t.png" height="100px" width="100px" alt"" />ROCK</td>
+        <td><img id="huntArea" src="food_t.png" height="100px" width="100px" alt"" />HUNT</td>
       </tr>  
-      <tr>
-        <td><img id="rock" src="pick_t.png" height="200px" width="200px" alt"" />ROCK</td>
-        <td><img id="hunt" src="food_t.png" height="200px" width="200px" alt"" />HUNT</td>
-      </tr>
     </table>
     
     <div class="progressBar1">
