--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="resourceWindowTab1">
          <ul>
            <li> 
-             <div class="label"><img id="search" src="quest_complete_t.png" height="100px" width="100px" alt"" />COLLECT STICK</div>
+             <div class="labelStick"><img id="search" src="wood_t.png" height="100px" width="100px" alt"" />COLLECT STICK</div>
              <div id="gatherStick"></div>
            </li>
         </ul>
