--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="resourceWindow">Resource Window Header
       <div class="resourceWindowTab1">
          <ul>
-           <li> 
+           <li id="removeBullets"> 
              <div class="labelStick"><img id="search" src="wood_t.png" height="100px" width="100px" alt"" />COLLECT STICK</div>
              <div id="gatherStick"></div>
            </li>
