--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       </tr>  
     </table>
     
+    <button type="button" id="collectStick">COLLECT STICK</button>
+    
     <div class="progressBar1">
       <p>I want to show a % that can change in here <br /></p>
     </div>
