--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </div>
     
     <div class="resourceWindow">Resource Window Header
-      <div class="resourceWindowTabs">
+      <div class="resourceWindowIcons">
          <ul>
-           <li id="removeBullets"> 
+           <li> 
              <div class="labelStick"><img id="search" src="wood_t.png" height="100px" width="100px" alt"" />COLLECT STICK</div>
              <div id="gatherStick"></div>
            </li>
