--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     
     <table class="resourceHub" border="1">
       <tr>
-        <td><img id="gatherStick" src="wood_t.png" height="100px" width="100px" alt"" />COLLECT STICK</td>
-        <td><img id="gatherRock" src="pick_t.png" height="100px" width="100px" alt"" />COLLECT ROCK</td>
-        <td><img id="searchArea" src="quest_complete_t.png" height="100px" width="100px" alt"" />SEARCH AREA</td>
-        <td><img id="huntArea" src="food_t.png" height="100px" width="100px" alt"" />HUNT IN AREA</td>
+        <td><img src="wood_t.png" height="100px" width="100px" alt"" />COLLECT STICK</td>
+        <td><img src="pick_t.png" height="100px" width="100px" alt"" />COLLECT ROCK</td>
+        <td><img src="quest_complete_t.png" height="100px" width="100px" alt"" />SEARCH AREA</td>
+        <td><img src="food_t.png" height="100px" width="100px" alt"" />HUNT IN AREA</td>
       </tr>  
     </table>
     
@@ -49,7 +49,7 @@
       <div class="resourceWindowIcons">
          <ul>
            <li> 
-             <div class="labelStick"><img id="search" src="wood_t.png" height="100px" width="100px" alt"" />COLLECT STICK</div>
+             <div class="labelStick"><img id="gatherStick" src="wood_t.png" height="100px" width="100px" alt"" />COLLECT STICK</div>
              <div id="gatherStick"></div>
            </li>
         </ul>
