--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <div class="resourceWindowIcons">
          <ul class="removeBullets">
            <li> 
-             <div><img src="wood_t.png" height="100px" width="100px" alt"" /><button class="typicalButton" onclick="increaseStick()">
-                document.write("Stick ="varStick;);</button></div>
+             <div class="stickIcon"><img src="wood_t.png" height="100px" width="100px" alt"" /><button class="typicalButton" onclick="increaseStick()">
+               <script>document.write("Stick ="varStick;);</script></button></div>
            </li>
         </ul>
       </div>
