--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
     <div class="resourceWindow">Resource Window Header
        <ul class="removeBullets">
          <li> 
-           <div class="stickIcon"><img src="wood_t.png" height="100px" width="100px" alt"" /><button class="typicalButton" onclick="increaseStick()">
-             <script>document.write("Stick ="varStick;);</script></button></div>
+           <div class="stickBox">
+             <div class="stickIcon"><img src="wood_t.png" height="100px" width="100px" alt"" /><button class="typicalButton" onclick="increaseStick()">
+               <script>document.write("Stick ="varStick;);</script></button>
+             </div>
+           </div>  
          </li>
       </ul>
     </div>
