--- a/index.html
+++ b/index.html
@@ -49,12 +49,10 @@
     
     <div class="resourceWindow">Resource Window Header
        <ul class="removeBullets">
-         <li> 
-           <div class="stickBox">
+         <li class="stickBox"> 
              <div class="stickIcon"><img src="wood_t.png" height="100px" width="100px" alt"" /><button class="typicalButton" onclick="increaseStick()">
                <script>document.write("Stick ="varStick;);</script></button>
              </div>
-           </div>  
          </li>
       </ul>
     </div>
