--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
     
     <div class="resourceWindow">Resource Window Header
        <ul class="removeBullets">
-         <li class="stickBox"> 
-             <div class="stickIcon"><img src="wood_t.png" height="100px" width="100px" alt"" /><button class="typicalButton" onclick="increaseStick()">
-               <script>document.write("Stick ="varStick;);</script></button>
-             </div>
+         <li class="stickBox"><img src="wood_t.png" height="100px" width="100px" alt"" /><button class="typicalButton"></button>
          </li>
       </ul>
     </div>
