--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
       <div class="resourceWindow">Resource Window Header
         <ul class="removeBullets">
-          <li class="stickBox"><img src="wood_t.png" height="100px" width="100px" alt"" /><button class="typicalButton"></button>
+          <li class="stickBox"><img src="wood_t.png" height="100px" width="100px" alt"" /><button class="typicalButton" onclick="increaseStick()"></button>
           </li>
         </ul>
       </div>
