--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     
       <div class="resourceWindow">Resource Window Header
         <ul class="removeBullets">
-          <li class="stickBox"><img src="wood_t.png" height="100px" width="100px" alt"" /><button class="typicalButton" onclick="increaseStick()"></button>
+          <li class="stickBox"><img src="wood_t.png" height="100px" width="100px" alt"" />
+            <button id="stickButton">Stick</button>
           </li>
         </ul>
       </div>
