--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <div class="resourceWindow">Resource Window Header
         <ul class="removeBullets">
           <li class="stickBox"><img src="wood_t.png" height="100px" width="100px" alt"" />
-            <button id="stickButton" onclick="increaseStick()">Stick</button>
+            <button id="stickButton" onclick="increaseStick();">Stick</button>
+            <input type="text" id="inc" value="0"></input>
           </li>
         </ul>
       </div>
